# bevy_scene_tools

./: Cargo.toml  README.md
assets/: cube.glb  ship.gltf  two_cubes.glb
examples/: basic.rs
src/: lib.rs
